--- a/style/css/minlare.css
+++ b/style/css/minlare.css
@@ -256,7 +256,7 @@ img {
 .hover-text-magenta:hover {
   color: #990099; }
 
-.text-grey, .work p {
+.text-grey, .expertise p, .work p {
   color: #666666; }
 
 .hover-text-grey:hover {
@@ -819,7 +819,8 @@ img {
   padding-top: 30px;
   padding-bottom: 30px; }
 
-.padding-horizontal, section, .main > div > div a {
+.padding-horizontal, section,
+footer, .main > div > div a {
   padding-left: 30px;
   padding-right: 30px; }
 
@@ -861,7 +862,7 @@ img {
 .padding-bottom-huge {
   padding-bottom: 60px; }
 
-.padding-vertical-huge, footer {
+.padding-vertical-huge {
   padding-top: 60px;
   padding-bottom: 60px; }
 
@@ -884,7 +885,8 @@ img {
 .padding-bottom-massive {
   padding-bottom: 80px; }
 
-.padding-vertical-massive, section > div {
+.padding-vertical-massive, section > div,
+footer > div {
   padding-top: 80px;
   padding-bottom: 80px; }
 
@@ -892,7 +894,7 @@ img {
   padding-left: 80px;
   padding-right: 80px; }
 
-.padding-none, .expertise ul {
+.padding-none {
   padding: 0; }
 
 .padding-left-none {
@@ -1266,7 +1268,7 @@ img {
 .margin-right-tiny {
   margin-right: 10px; }
 
-.margin-top-tiny, h1, .continue i, .expertise ul li span {
+.margin-top-tiny, h1, .continue i {
   margin-top: 10px; }
 
 .margin-bottom-tiny {
@@ -1318,7 +1320,7 @@ img {
 .margin-bottom-small, .work h4 {
   margin-bottom: 20px; }
 
-.margin-vertical-small, .expertise ul li {
+.margin-vertical-small {
   margin-top: 20px;
   margin-bottom: 20px; }
 
@@ -1450,10 +1452,10 @@ img {
 .margin-right-huge {
   margin-right: 60px; }
 
-.margin-top-huge {
+.margin-top-huge, h3 {
   margin-top: 60px; }
 
-.margin-bottom-huge, .work > div > div:first-of-type {
+.margin-bottom-huge, .expertise h2, .work > div > div:first-of-type {
   margin-bottom: 60px; }
 
 .margin-vertical-huge {
@@ -1533,7 +1535,7 @@ img {
   margin-left: -80px;
   margin-right: -80px; }
 
-.margin-none, .expertise ul {
+.margin-none {
   margin: 0; }
 
 .margin-left-none {
@@ -2759,13 +2761,13 @@ img {
   .mobile-h4 {
     font-size: 16px; } }
 
-.text-left {
+.text-left, .main, .expertise > div {
   text-align: left; }
 
 .text-right {
   text-align: right; }
 
-.text-center, body, .main, footer {
+.text-center, body, .continue {
   text-align: center; }
 
 .text-justify {
@@ -2924,13 +2926,13 @@ img {
   .mobile-text-overflow-ellipsis {
     text-overflow: ellipsis; } }
 
-.light, h2, h3, .main span, .main > div > div a, .continue, .copyright {
+.light, h2, .main span, .main > div > div a, .continue, .copyright {
   font-weight: 300; }
 
-.not-bold, .expertise ul li span {
+.not-bold {
   font-weight: 500; }
 
-.bold, h1, .expertise ul li, .work h4 {
+.bold, h1, .work h4 {
   font-weight: 700; }
 
 @media (min-width: 541px) {
@@ -2963,7 +2965,7 @@ img {
 .smaller, .work p {
   font-size: 80%; }
 
-.small {
+.small, .expertise p {
   font-size: 90%; }
 
 .big {
@@ -3170,7 +3172,7 @@ img {
 .line-height-125 {
   line-height: 125%; }
 
-.line-height-150, .copyright {
+.line-height-150, h2, .copyright {
   line-height: 150%; }
 
 .line-height-175 {
@@ -5201,7 +5203,7 @@ textarea, .appearance-none {
 .hide {
   display: none; }
 
-.block, .expertise ul li span {
+.block {
   display: block; }
 
 .inline-block, .main > div > div a {
@@ -6510,11 +6512,14 @@ textarea, .appearance-none {
 .clear-none {
   clear: none; }
 
-.clearfix:after, .row:after, section > div:after, .clearfix:before, .row:before, section > div:before {
+.clearfix:after, .row:after, section > div:after,
+footer > div:after, .clearfix:before, .row:before, section > div:before,
+footer > div:before {
   content: " ";
   display: table; }
 
-.clearfix:after, .row:after, section > div:after {
+.clearfix:after, .row:after, section > div:after,
+footer > div:after {
   clear: both; }
 
 @media (min-width: 541px) {
@@ -6562,7 +6567,8 @@ textarea, .appearance-none {
   .mobile-clearfix:after, .mobile-row:after {
     clear: both; } }
 
-.row, section > div {
+.row, section > div,
+footer > div {
   width: 100%;
   max-width: 1000px;
   margin-left: auto;
@@ -6689,7 +6695,8 @@ textarea, .appearance-none {
 .column-append-12 {
   margin-right: calc(100% / (12 / 12)); }
 
-.row, section > div {
+.row, section > div,
+footer > div {
   width: 100%;
   max-width: 1000px;
   margin-left: auto;
@@ -6972,7 +6979,7 @@ textarea, .appearance-none {
     margin-right: auto;
     display: block; } }
 
-.flex, .main, .expertise > div > div {
+.flex, .main {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -7050,7 +7057,7 @@ textarea, .appearance-none {
   -moz-justify-content: flex-end;
   justify-content: flex-end; }
 
-.flex-center, .main, .flex-horizontal-center {
+.flex-center, .flex-horizontal-center {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   -webkit-justify-content: center;
@@ -7084,7 +7091,7 @@ textarea, .appearance-none {
   -moz-align-items: flex-end;
   align-items: flex-end; }
 
-.flex-center, .main, .flex-vertical-center {
+.flex-center, .flex-vertical-center, .main {
   -webkit-box-align: center;
   -ms-flex-align: center;
   -webkit-align-items: center;
@@ -7156,14 +7163,14 @@ textarea, .appearance-none {
   -ms-flex-negative: 0;
   flex-shrink: 0; }
 
-.flex-fill-equal > *, .expertise > div > div > *, .flex-fill > * {
+.flex-fill-equal > *, .flex-fill > * {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
   -moz-flex-grow: 1;
   -ms-flex-positive: 1;
   flex-grow: 1; }
 
-.flex-fill-equal > *, .expertise > div > div > * {
+.flex-fill-equal > * {
   -webkit-flex-basis: 0;
   -moz-flex-basis: 0;
   -ms-flex-preferred-size: 0;
@@ -7690,14 +7697,15 @@ h2 {
   font-size: 24px; }
 
 h3 {
-  font-size: 24px; }
+  font-size: 20px; }
 
 .main {
   background-image: url(../images/pexels-photo-214670.jpeg);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  min-height: 400px; }
   .main:before {
     content: '';
     background-color: rgba(0, 0, 0, 0.25); }
@@ -7716,10 +7724,11 @@ h3 {
   will-change: opacity;
   transition: opacity .25s; }
 
-.expertise ul {
-  list-style: none; }
-  .expertise ul li span {
-    font-size: 14px; }
+.expertise > div {
+  max-width: 700px; }
+
+.expertise p {
+  line-height: 175%; }
 
 .work p {
   line-height: 175%; }
